# vt-wm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  runs
configs/: default.yaml  manifeel.yaml  manifeel_ada.yaml  univtac.yaml  univtac_a100.yaml  univtac_insert_hdmi_ada.yaml  univtac_lift_bottle_ada.yaml
det/: ada24g.yaml  lift_bottle_neg_collect_ada24g.yaml  univtac_insert_hdmi_eval_ada24g.yaml  univtac_insert_hdmi_eval_ada24g_full.yaml  univtac_lift_bottle_eval_ada24g_full.yaml  univtac_lift_bottle_eval_ada24g_quick.yaml
det/context/: README.txt
eval_out_univtac_insert_HDMI/: metrics.json
paper/: Visuo-Tactile World Models.md
scripts/: det_collect_univtac_lift_bottle_neg_ada.sh  det_eval_univtac_insert_hdmi_ada.sh  det_eval_univtac_lift_bottle_ada.sh  det_train_ada.sh  eval_univtac_lift_bottle.sh  measure_action_delta.py  openloop_eval_univtac_lift_bottle.sh  pull_ckpt.sh  run_univtac_8gpu.sh  run_univtac_eval.sh  smoke_test.sh  verify_action_sensitivity.py  verify_forcefield.py  vtwm_policy_smoke.py
vtwm/: build.py  check_encoders.py  eval.py  infer.py  losses.py  openloop_eval.py  train.py
vtwm/data/: fake_dataset.py  inspect_zarr.py  manifeel_dataset.py  univtac_dataset.py
vtwm/encoders/: sparsh_forcefield.py  sparsh_gelsight.py  tactile_sparshx.py  vision_cosmos.py
vtwm/models/: attention.py  pos_embed.py  predictor.py  projectors.py  rope.py  train_module.py
vtwm/planning/: cem.py
