[project]
name = "vt-wm"
version = "0.1.0"
description = "Reproduction of Visuo-Tactile World Models (arXiv:2602.06001)"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "numpy<2",
    "einops>=0.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "timm>=0.9",
    "matplotlib>=3.7",
    "rich>=13",
    "tqdm>=4.66",
    "pyyaml>=6",
    "lightning>=2.6.5",
    "scipy>=1.15.3",
    "opencv-python-headless>=4.11.0.86",
    "huggingface-hub[hf-transfer]>=1.17.0",
    "hf-xet>=1.5.0",
    "socksio>=1.0.0",
    "pysocks>=1.7.1",
    "zarr<3",
    "numcodecs<0.16",
    "wandb>=0.27.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "h5py>=3",
]

[tool.uv]
# tactile_ssl (third_party) is added to sys.path at runtime; no install needed.

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vtwm"]
